crates/rcc_driver/tests/ui/parse/nested_block_comment.stderr
Error: expected `;` after declaration
   ╭─[ D:/noname/kookmin/4-1/rc/crates/rcc_driver/tests/ui/parse/nested_block_comment.c:1:28 ]
   │
 1 │ /* outer /* inner */ still outside */
───╯
Error: expected `;` after declaration
   ╭─[ D:/noname/kookmin/4-1/rc/crates/rcc_driver/tests/ui/parse/nested_block_comment.c:1:36 ]
   │
 1 │ /* outer /* inner */ still outside */
───╯
Error: expected identifier or `(` in declarator
   ╭─[ D:/noname/kookmin/4-1/rc/crates/rcc_driver/tests/ui/parse/nested_block_comment.c:1:37 ]
   │
 1 │ /* outer /* inner */ still outside */
───╯
Error: expected identifier or `(` in declarator
   ╭─[ D:/noname/kookmin/4-1/rc/crates/rcc_driver/tests/ui/parse/nested_block_comment.c:1:37 ]
   │
 1 │ /* outer /* inner */ still outside */
───╯
